--- a/src/style/css.css
+++ b/src/style/css.css
@@ -1,5 +1,12 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+
 body{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2{
+  font-weight: 400;
+  font-size: 32px;
 }
 
 /*input[type=text], select, textarea {
@@ -36,10 +43,13 @@ input[readOnly] {
   }
 }
 
-.courselist label { display: block; width: 80px; }
+.courselist label { 
+  display: block; 
+  width: 85px; 
+}
 
 .field_set {
-  background-color: #eeeeee;
+  background-color: transparent;
   border-color: #F00;
   border-style: solid;
 }
@@ -61,7 +71,7 @@ input[readOnly] {
 .login-container{
   max-width: 1000px;
   margin: auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .profile-image-pic{
@@ -71,7 +81,7 @@ input[readOnly] {
 }
 
 .cardbody-color{
-  background-color: #ebf2fa;
+  background-color: white;
 }
 
 a{
@@ -87,7 +97,7 @@ a{
 .position-container{
   max-width: 1000px;
   margin: auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .dropdown{
@@ -101,3 +111,47 @@ a{
 .createbtn{
   float:right;
 }
+
+/*Style for Admin Dashboard*/
+.open-position-container{
+  max-width: 1000px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card{
+  background-color: white;
+  border: 2px solid rgba(0,0,0,.125);
+}
+
+.open-position-btn{
+  width: 150px;
+}
+
+.input-group{
+  width:fit-content;
+}
+
+.login-input{
+  width: auto;
+}
+
+body{
+  background-color: #ebf2fa;
+}
+
+.btn{
+  background-color:#0066cc;
+
+}
+
+.btn:hover{
+  background-color: #FFdd00;
+  border-color: #FFdd00;
+  color:#0066cc;
+}
+
+.applicants{
+  background-color: white;
+}
+
