edits and filter design for admin

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -165,3 +165,10 @@ body{
 .form-check{
   min-height: auto;
 }
+
+.card-filter{
+  width: fit-content;
+  position:absolute;
+  max-width: 1000px;
+  margin: auto;
+}
