--- a/src/style/css.css
+++ b/src/style/css.css
@@ -183,3 +183,12 @@ body{
   max-width: 1000px;
   margin: auto;
 }
+.sticky 
+{
+  position: -webkit-sticky; /* Safari */
+  float: left;
+  position: sticky;
+  top: 50px;
+ /* background-color: green;
+  border: 2px solid #4CAF50;*/
+}
