edit sticky name

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -183,7 +183,7 @@ body{
   max-width: 1000px;
   margin: auto;
 }
-.sticky 
+.stickyleft 
 {
   position: -webkit-sticky; /* Safari */
   float: left;
