--- a/src/style/css.css
+++ b/src/style/css.css
@@ -197,7 +197,9 @@ body{
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 50px;
- /* background-color: green;
+  z-index:1;
+/*  background-color: #ebf2fa;
+  background-color: green;
   border: 2px solid #4CAF50;*/
 }
 .sticky-right 
@@ -209,8 +211,16 @@ body{
  /* background-color: green;
   border: 2px solid #4CAF50;*/
 }
-.backgroundelement
-{
-  z-index:-1;
+.notes-wrapper {
+  width: auto; 
+  padding: 0 10px;
+  word-wrap: break-word;
+  overflow:auto; 
   position:relative;
+  max-height: 150px;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.notes-wrapper::-webkit-scrollbar {
+  display: none;
 }
