--- a/src/style/css.css
+++ b/src/style/css.css
@@ -125,12 +125,14 @@ a{
 
 /*Style for Admin Dashboard*/
 .open-position-container{
+  z-index: -1;
   max-width: 1000px;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .card{
+  z-index: auto;
   background-color: white;
   border: 2px solid rgba(0,0,0,.125);
 }
