--- a/src/style/css.css
+++ b/src/style/css.css
@@ -129,7 +129,7 @@ a{
   max-width: 1000px;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
-  padding-left: max(20px);
+  margin-left: max(20px);
 }
 
 .card{
