--- a/src/style/css.css
+++ b/src/style/css.css
@@ -129,7 +129,14 @@ a{
   max-width: 1000px;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
-  margin-left: min(200px);
+  padding-left: min(200px);
+  padding-right: min(230px);
+  
+  justify-content: center;
+  align-items: center;
+}
+#card{
+  min-width: 500px;
 }
 
 .card{
