--- a/src/style/css.css
+++ b/src/style/css.css
@@ -9,34 +9,6 @@ h2{
   font-size: 32px;
 }
 
-/*input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit], button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover, button:hover {
-  background-color: #45a049;
-}
-
-input[readOnly] {
-  background-color: #D3D3D3;
-}*/
-
 .input-group.is-invalid {
   ~ .invalid-feedback {
     display: block;
@@ -55,7 +27,6 @@ input[readOnly] {
 }
 
 .container {
-  align:center;
   border-radius: 5px;
   background-color: #ebf2fa;
   padding: 20px;
@@ -99,6 +70,7 @@ a{
   text-align: center;
   width: 175px;
 }
+
 .file-dropdown-toggle {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
@@ -131,10 +103,10 @@ a{
   font-family: Arial, Helvetica, sans-serif;
   padding-left: min(200px);
   padding-right: min(230px);
-  
   justify-content: center;
   align-items: center;
 }
+
 #card{
   min-width: 500px;
 }
@@ -148,14 +120,17 @@ a{
 .open-position-btn{
   width: 150px;
 }
+
 .open-position-btn2{
   width: 150px;
   margin-right: min(50px);
   margin-right: max(50px);
 }
+
 .open-position-input-group{
   border-radius: 5px;
 }
+
 .input-group-btn{
   font-size: 0.75em;
   width: 75px;
@@ -175,7 +150,6 @@ body{
 
 .btn{
   background-color:#0066cc;
-
 }
 
 .btn:hover{
@@ -198,35 +172,29 @@ body{
   max-width: 1000px;
   margin: auto;
 }
-.sticky-left 
-{
+
+.sticky-left {
   position: -webkit-sticky; /* Safari */
   float: left;
   position: sticky;
   top: 50px;
- /* background-color: green;
-  border: 2px solid #4CAF50;*/
 }
-.sticky-center
-{
+
+.sticky-center{
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 50px;
   z-index:1;
-/*  background-color: #ebf2fa;
-  background-color: green;
-  border: 2px solid #4CAF50;*/
 }
-.sticky-right 
-{
+
+.sticky-right{
   position: -webkit-sticky; /* Safari */
   float: right;
   position: sticky;
   top: 50px;
- /* background-color: green;
-  border: 2px solid #4CAF50;*/
 }
-.notes-wrapper {
+
+.notes-wrapper{
   width: auto; 
   padding: 0 10px;
   word-wrap: break-word;
@@ -236,7 +204,8 @@ body{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
-.notes-wrapper::-webkit-scrollbar {
+
+.notes-wrapper::-webkit-scrollbar{
   display: none;
 }
 
@@ -252,9 +221,11 @@ body{
   .dropdown-menu.show {
     transform: translate(150px, 38px)!important;
   }
+
   .input-group-text.bi.bi-file-earmark{
     display: none;
   }
+
   .label-size{
     width: fit-content!important;
   }
