--- a/src/style/css.css
+++ b/src/style/css.css
@@ -1,7 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 body{
   font-family: Arial, Helvetica, sans-serif;
+  background-color: whitesmoke;
 }
 
 h2{
@@ -144,10 +146,6 @@ a{
   width: auto;
 }
 
-body{
-  background-color: #ebf2fa;
-}
-
 .btn{
   background-color:#0066cc;
 }
@@ -274,4 +272,69 @@ body{
   .input-group{
     display: inline-flex;
   }
+
+  .header-title{
+    display: none;
+  }
 }
+
+/*PAGE HEADER + TITLE*/
+.header{
+  background-color: #0066cc;
+  display: flex;
+}
+
+.header-title{
+  display: flex;
+  float: left;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  font-size: 45px;
+  align-items: end;
+}
+.divider{
+  background-color: #FFdd00;
+  height: 5px;
+}
+
+.container-title{
+  color: #0066cc;
+  padding:10px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  background-color: white; 
+  width: 100%;
+  font-size: 30px;
+  border-bottom: inset;
+  display: inline-flex;
+  height: 60px;
+}
+
+.page-title{
+  color: #0066cc;
+  font-weight: 700;
+  background-color: white; 
+  width: 100%;
+  font-size: 30px;
+}
+
+.search-bar{
+  height: 36px;
+}
+
+.search-btn{
+  background-color: #FFdd00;
+  border-color: #FFdd00;
+  color:#0066cc;
+}
+
+.search-btn:hover{
+  background-color: #0066cc;
+  border-color: #0066cc;
+  color: #FFdd00;
+}
+
+.search-input{
+  background-color:whitesmoke;
+}
+/*END OF PAGE HEADER + TITLE*/
