--- a/src/style/css.css
+++ b/src/style/css.css
@@ -97,7 +97,7 @@ a{
   float:right;
 }
 
-/*Style for Admin Dashboard*/
+/*Style for Admin Dashboard and Welcome page*/
 .open-position-container{
   z-index: -1;
   max-width: 1500px;
