code clean up + format and admin page media screen

--- a/src/style/css.css
+++ b/src/style/css.css
@@ -79,7 +79,7 @@ h2{
   font-family: Arial, Helvetica, sans-serif;
 }
 #newbutton{
-  width: 125%;
+  width: max-content;
 }
 .right-card-title{
   font-size: 75%;
