--- a/src/style/css.css
+++ b/src/style/css.css
@@ -11,6 +11,10 @@ h2{
   font-size: 32px;
 }
 
+iframe {
+  pointer-events: none;
+}
+
 /*PAGE HEADER + TITLE*/
 .sticky-top{
   position: -webkit-sticky;
