--- a/src/style/css.css
+++ b/src/style/css.css
@@ -338,6 +338,22 @@ a:hover{
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.checkbox-container input[type=checkbox] {
+  display: none;
+}
+
+.checkbox-container input[type=checkbox]:checked + label {
+  color: #FFFFFF;
+  background: #0066CC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.checkbox-container input[type=checkbox]:checked:valid + label {
+  color: #FFFFFF;
+  background: #198754;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 /*Style for Create Position*/
 .position-container{
   max-width: 1000px;
