--- a/src/style/css.css
+++ b/src/style/css.css
@@ -300,7 +300,7 @@ a:hover{
   border-bottom-left-radius: 0 !important;
 }
 
-.radio-container {
+.radio-container, .checkbox-container {
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -309,12 +309,8 @@ a:hover{
 }
 
 .checkbox-container {
-  display: inline-block;
-  padding: 5px;
-}
-
-.checkbox-container label{
-  width: 80% !important;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0 !important;
 }
 
 .radio-container label, .checkbox-container label {
