--- a/src/style/css.css
+++ b/src/style/css.css
@@ -300,7 +300,7 @@ a:hover{
   border-bottom-left-radius: 0 !important;
 }
 
-.radio-container, .checkbox-container {
+.radio-container {
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -308,8 +308,11 @@ a:hover{
   padding: 5px;
 }
 
-.checkbox-container {
-  border-radius: 0 !important;
+.checkbox-container {  
+  background: #fff;
+  border-radius: 4px;
+  display: inline-block;
+  padding: 5px;
 }
 
 .radio-container label, .checkbox-container label {
@@ -327,12 +330,20 @@ a:hover{
 }
 
 .radio-container input[type=radio], .checkbox-container input[type=checkbox] {
-  display: none;
+  color: #FFFFFF;
+  background: ##FFDD00;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.radio-container input[type=radio]:hover + label, .checkbox-container input[type=checkbox]:hover + label {
+  color: #FFFFFF;
+  background: #0066CC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .radio-container input[type=radio]:checked + label, .checkbox-container input[type=checkbox]:checked + label {
   color: #FFFFFF;
-  background: #0066CC;
+  background: ##044C7C;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
