--- a/src/style/css.css
+++ b/src/style/css.css
@@ -330,6 +330,10 @@ a:hover{
 }
 
 .radio-container input[type=radio], .checkbox-container input[type=checkbox] {
+  display: none;
+}
+
+.radio-container input[type=radio] + label, .checkbox-container input[type=checkbox] + label {
   color: #FFFFFF;
   background: ##FFDD00;
   border: 1px solid rgba(0, 0, 0, 0.1);
