--- a/src/style/css.css
+++ b/src/style/css.css
@@ -335,7 +335,7 @@ a:hover{
 
 .radio-container input[type=radio] + label, .checkbox-container input[type=checkbox] + label {
   color: #FFFFFF;
-  background: ##FFDD00;
+  background: #FFDD00;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -348,12 +348,6 @@ a:hover{
 .radio-container input[type=radio]:checked + label, .checkbox-container input[type=checkbox]:checked + label {
   color: #FFFFFF;
   background: ##044C7C;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.radio-container input[type=radio]:checked:valid + label, .checkbox-container input[type=checkbox]:checked:valid + label {
-  color: #FFFFFF;
-  background: #198754;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
