--- a/src/style/css.css
+++ b/src/style/css.css
@@ -11,6 +11,10 @@ h2{
   font-size: 32px;
 }
 
+.was-validated div:has(:invalid)~.invalid-feedback {
+    display: block;
+}
+
 /*PAGE HEADER + TITLE*/
 .sticky-top{
   position: -webkit-sticky;
@@ -372,11 +376,7 @@ a:hover{
   border: 1px solid rgba(222, 53, 69);
 }
 
-.your-class{
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23198754' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
-}
-
-.was-validated .radio-container:has(input[type=radio]:checked:valid){
+.was-validated .radio-container:has(input[type=radio]:checked:valid), .was-validated .radio-container:has(input[type=checkbox]:checked:valid){
     border-color: #198754;
     padding-right: calc(1.5em + .75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
@@ -385,7 +385,7 @@ a:hover{
     background-size: calc(.75em + .375rem) calc(.75em + .375rem);
 }
 
-.was-validated .radio-container:has(input[type=radio]:invalid){
+.was-validated .radio-container:has(input[type=radio]:invalid), .was-validated .radio-container:has(input[type=checkbox]:invalid){
     border-color: #dc3545;
     padding-right: calc(1.5em + .75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
