--- a/src/style/css.css
+++ b/src/style/css.css
@@ -21,8 +21,13 @@ h2{
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  width: 100%;
   display: inline-block;
   padding: 5px;
+  
+  display: flex;                   /* 1 */
+  align-items: flex-start;         /* 2 */
+  justify-content: space-between;  /* 3 */
 }
 
 .checkbox-container {  
@@ -43,8 +48,23 @@ h2{
   padding: 0 5px 0 5px;
   text-align: center;
   transition: 0.2s all ease-in-out;
-  min-width: 100px;
   width: auto;
+}
+
+.GTA-div{
+	width: 75%;
+}
+
+.GTA-div label{
+	min-width: 20% !important;
+}
+
+.radio-container label {
+  min-width: 30%;
+}
+
+.checkbox-container label {
+  min-width: 100px;
 }
 
 .radio-container input[type=radio], .checkbox-container input[type=checkbox] {
@@ -432,6 +452,12 @@ a:hover{
 
 .createbtn{
   float:right;
+}
+
+.create-textarea{
+	resize: none;
+	width: 100%;
+	height: 83%;
 }
 
 /*LOGIN PAGE DESIGN*/
